--- a/CPF.Linux/CPF.Linux.csproj
+++ b/CPF.Linux/CPF.Linux.csproj
@@ -13,6 +13,7 @@
     <PackageId>Xhm.CPF.Linux</PackageId>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
