修改xml生成路径

--- a/CPF.Linux/CPF.Linux.csproj
+++ b/CPF.Linux/CPF.Linux.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\xhm\Documents\Visual Studio 2019\ConsoleApp1\CPF.Linux\CPF.Linux.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\CPF.Linux.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
