--- a/CPF.Mac/CPF.Mac.csproj
+++ b/CPF.Mac/CPF.Mac.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\xhm\Documents\Visual Studio 2019\ConsoleApp1\CPF.Mac\CPF.Mac.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\CPF.Mac.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
