--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0;net40;net5;net6</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.0;net40;net5;net6;net8</TargetFrameworks>
     <ApplicationIcon />
     <StartupObject />
     <OutputType>WinExe</OutputType>
