--- a/CPF.Linux/CPF.Linux.csproj
+++ b/CPF.Linux/CPF.Linux.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.9.6.6</Version>
+    <Version>0.9.6.7</Version>
     <Authors>QQ:761716178</Authors>
     <Company>QQ:761716178</Company>
     <Product>QQ:761716178 跨平台UI框架</Product>
@@ -12,6 +12,7 @@
     <PackageId>Xhm.CPF.Linux</PackageId>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
