--- a/CPF.Mac/CPF.Mac.csproj
+++ b/CPF.Mac/CPF.Mac.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Product>QQ:761716178 跨平台UI框架</Product>
-    <Version>0.9.6.6</Version>
+    <Version>0.9.6.7</Version>
     <PackageId>Xhm.CPF.Mac</PackageId>
     <Description>CPF(Cross platform UI framework) QQ:761716178 跨平台UI框架  http://cpf.cskin.net/</Description>
     <Copyright>Copyright (c) 2020 by http://cpf.cskin.net/</Copyright>
@@ -11,6 +11,7 @@
     <Authors>QQ:761716178</Authors>
     <Company>QQ:761716178</Company>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
