--- a/CPF.Skia/CPF.Skia.csproj
+++ b/CPF.Skia/CPF.Skia.csproj
@@ -3,13 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Product>QQ:761716178 跨平台UI框架</Product>
-    <Version>0.9.6.6</Version>
+    <Version>0.9.6.7</Version>
     <PackageId>Xhm.CPF.Skia</PackageId>
     <Description>CPF(Cross platform UI framework) QQ:761716178 跨平台UI框架  http://cpf.cskin.net/</Description>
     <Copyright>Copyright (c) 2020 by http://cpf.cskin.net/</Copyright>
     <PackageReleaseNotes>CPF(Cross platform UI framework) QQ:761716178 跨平台UI框架  http://cpf.cskin.net/</PackageReleaseNotes>
     <Authors>QQ:761716178</Authors>
     <Company>QQ:761716178</Company>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
