--- a/CPF.Toolkit/CPF.Toolkit.csproj
+++ b/CPF.Toolkit/CPF.Toolkit.csproj
@@ -5,7 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
+    <None Remove="Images\ask.png" />
+    <None Remove="Images\error.png" />
+    <None Remove="Images\sucess.png" />
+    <None Remove="Images\warn.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Images\ask.png" />
+    <EmbeddedResource Include="Images\error.png" />
+    <EmbeddedResource Include="Images\sucess.png" />
+    <EmbeddedResource Include="Images\warn.png" />
   </ItemGroup>
 
   <ItemGroup>
