--- a/CPF.Windows/CPF.Windows.csproj
+++ b/CPF.Windows/CPF.Windows.csproj
@@ -52,6 +52,16 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.Drawing.Common">
+      <Version>8.0.6</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net5'">
+    <PackageReference Include="System.Drawing.Common">
+      <Version>8.0.6</Version>
+    </PackageReference>
+  </ItemGroup>
 
   <PropertyGroup>
     <DefineConstants Condition="'$(TargetFramework)'=='net40'">Net4</DefineConstants>
